--- a/Predicting_Pneumonia_VGG16.ipynb
+++ b/Predicting_Pneumonia_VGG16.ipynb
@@ -12,25 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8d1256d0-7c52-4384-a1cf-31a8a89bdb86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.layers import Input, Lambda, Dense, Flatten\n",
-    "from keras.models import Model\n",
-    "from keras.applications.vgg16 import VGG16\n",
-    "from keras.applications.vgg16 import preprocess_input\n",
-    "from keras.preprocessing import image\n",
-    "from keras.models import Sequential\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
     "import numpy as np\n",
     "from glob import glob\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "import tensorflow as tf\n",
     "\n",
-    "from keras.models import load_model"
+    "from tensorflow.keras.layers import Input, Lambda, Dense, Flatten\n",
+    "from tensorflow.keras.models import Sequential,Model,load_model\n",
+    "from tensorflow.keras.applications.vgg16 import VGG16\n",
+    "from tensorflow.keras.applications.vgg16 import preprocess_input\n",
+    "from tensorflow.keras.preprocessing import image\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n"
    ]
   },
   {
